# backend/src/swagger/doc/swagger.json
@@ -21,9 +21,7 @@
       "description": "Laptops management"
     }
   ],
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["http"],
   "securityDefinitions": {
     "Bearer": {
       "type": "apiKey",
@@ -33,18 +31,12 @@
       "scheme": "bearer"
     }
   },
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ],
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
   "paths": {
     "/users/login": {
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -81,9 +73,7 @@
     },
     "/users/register": {
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -123,9 +113,7 @@
     },
     "/users/me": {
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "responses": {
           "200": {
@@ -136,9 +124,7 @@
     },
     "/employees/": {
       "get": {
-        "tags": [
-          "Employees"
-        ],
+        "tags": ["Employees"],
         "description": "",
         "parameters": [
           {
@@ -162,9 +148,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Employees"
-        ],
+        "tags": ["Employees"],
         "description": "",
         "parameters": [
           {
@@ -204,9 +188,7 @@
     },
     "/employees/{id}": {
       "get": {
-        "tags": [
-          "Employees"
-        ],
+        "tags": ["Employees"],
         "description": "",
         "parameters": [
           {
@@ -226,9 +208,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Employees"
-        ],
+        "tags": ["Employees"],
         "description": "",
         "parameters": [
           {
@@ -272,9 +252,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Employees"
-        ],
+        "tags": ["Employees"],
         "description": "",
         "parameters": [
           {
@@ -294,21 +272,9 @@
         }
       }
     },
-    "/employees/{{where{id:parseInt(id)}});returnres.status(200).json({message:Employeedeletedsuccessfully});}catch(error){returnres.status(500).json({error:Error}": {
-      "delete": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/laptops/": {
       "get": {
-        "tags": [
-          "Laptops"
-        ],
+        "tags": ["Laptops"],
         "description": "",
         "parameters": [
           {
@@ -332,9 +298,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Laptops"
-        ],
+        "tags": ["Laptops"],
         "description": "",
         "parameters": [
           {
@@ -377,9 +341,7 @@
     },
     "/laptops/{id}": {
       "get": {
-        "tags": [
-          "Laptops"
-        ],
+        "tags": ["Laptops"],
         "description": "",
         "parameters": [
           {
@@ -399,9 +361,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Laptops"
-        ],
+        "tags": ["Laptops"],
         "description": "",
         "parameters": [
           {
@@ -448,9 +408,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Laptops"
-        ],
+        "tags": ["Laptops"],
         "description": "",
         "parameters": [
           {
@@ -472,9 +430,7 @@
     },
     "/laptops/employee/{id}": {
       "get": {
-        "tags": [
-          "Laptops"
-        ],
+        "tags": ["Laptops"],
         "description": "",
         "parameters": [
           {
@@ -490,16 +446,6 @@
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/laptops/{{where{id:parseInt(id)}});returnres.status(200).json({message:Laptopdeletedsuccessfully});}catch(error){returnres.status(500).json({error:Error}": {
-      "delete": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
           }
         }
       }
